src/main/java/com/example/team_work_management/exception/error/NotificationOfUserNotFoundException.java
package com.example.team_work_management.exception.error;

public class NotificationOfUserNotFoundException extends RuntimeException{
    public NotificationOfUserNotFoundException(String message){
        super(message);
    }
}
